--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,8 @@
         </init-param>
         <init-param>
             <param-name>ignore</param-name>
-            <param-value>(^(.+[.])(jsp|png|gif|jpg|js|css|jspx|jpeg|html)$)|(^\/wiki)</param-value>
+            <!--<param-value>(^(.+[.])(jsp|png|gif|jpg|js|css|jspx|jpeg|html)$)|(^\/wiki)</param-value>-->
+            <param-value>/((.)(jsp|png|gif|jpg|js|css|jspx|jpeg|html|json|md)$)|((^\/wiki)+)/</param-value>
         </init-param>
     </filter>
 
