--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,34 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'war'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-noarg'
+apply plugin: 'kotlin-allopen'
+
+noArg {
+    annotations('name.zeno.zervice.annontations.DataClass')
+}
+allOpen {
+    annotations('name.zeno.zervice.annontations.DataClass')
+}
+
 
 repositories {
     mavenCentral()
 }
+
+buildscript {
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:1.1.3-2"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:1.1.3-2"
+    }
+
+    repositories {
+        mavenCentral()
+    }
+}
+
 
 dependencies {
     testCompile 'junit:junit:4.11'
@@ -14,7 +38,7 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.jetbrains:annotations:15.0'
 
-    compile 'org.nutz:nutz:1.r.59'
+    compile 'org.nutz:nutz:1.r.62'
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'org.dom4j:dom4j:2.0.0'
     compile 'jaxen:jaxen:1.1.6'
@@ -27,4 +51,11 @@ dependencies {
 
     //结巴分词 https://github.com/huaban/jieba-analysis
     compile 'com.huaban:jieba-analysis:1.0.2'
+
+    // kotlin stdlib
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.3-2'
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    providedCompile 'org.projectlombok:lombok:1.16.18'
 }
+
